--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,5 +14,6 @@ jobs:
       uses: shimataro/ssh-key-action@v2
       with:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
+        known_hosts: ${{ secrets.SSH_HOST }}
     - name: SSH connection to Server
       run: ssh -p 22 ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} /home/villwulf/project/external/startup.sh zkapi
