remove package-lock, update index.js to run https http2, new dependencies

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "spdy": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
